...
                Text("Remote 🔵").tag(StorageType.remote)
            }
            .pickerStyle(SegmentedPickerStyle())
            .padding()
            contentView
        }
        .navigationBarTitle("Performance List")
        .navigationBarItems(trailing: deleteAllButton)
        .task {
            viewModel.fetchPerformances(filter: selectedFilter)
        }
        .onChange(of: selectedFilter, { _, newValue in
            Task {
...
                .progressViewStyle(CircularProgressViewStyle())
                .padding()
                .frame(maxWidth: .infinity, maxHeight: .infinity)
        case .empty:
            emptyView
        case .content(let performances):
            List(performances) { performance in
                HStack {
                    Text(performance.name)
                    Spacer()
                    Text("\(performance.duration) min")
                        .foregroundColor(.gray)
                }
...
