...
    private var addButton: some View {
        Button(action: {
            withAnimation(.easeInOut) {
                showPopup = true
            }
        }) {
            Label("Add", systemImage: "plus.circle.fill")
                .foregroundColor(.black)
        }
    }
    
    @ViewBuilder
    private var contentView: some View {
...
